; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/chipidea/extr_usbmisc_imx.c_is_imx53_usbmisc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/chipidea/extr_usbmisc_imx.c_is_imx53_usbmisc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imx_usbmisc_data = type { i32 }
%struct.imx_usbmisc = type { i32* }

@imx53_usbmisc_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.imx_usbmisc_data*)* @is_imx53_usbmisc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_imx53_usbmisc(%struct.imx_usbmisc_data* %0) #0 {
  %2 = alloca %struct.imx_usbmisc_data*, align 8
  %3 = alloca %struct.imx_usbmisc*, align 8
  store %struct.imx_usbmisc_data* %0, %struct.imx_usbmisc_data** %2, align 8
  %4 = load %struct.imx_usbmisc_data*, %struct.imx_usbmisc_data** %2, align 8
  %5 = getelementptr inbounds %struct.imx_usbmisc_data, %struct.imx_usbmisc_data* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.imx_usbmisc* @dev_get_drvdata(i32 %6)
  store %struct.imx_usbmisc* %7, %struct.imx_usbmisc** %3, align 8
  %8 = load %struct.imx_usbmisc*, %struct.imx_usbmisc** %3, align 8
  %9 = getelementptr inbounds %struct.imx_usbmisc, %struct.imx_usbmisc* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp eq i32* %10, @imx53_usbmisc_ops
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local %struct.imx_usbmisc* @dev_get_drvdata(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
